# mueveunadecadatipo

./: CCirculo.cpp  CCirculo.h  CFigura.cpp  CFigura.h  CMakeLists.txt  CPoligono.cpp  CPoligono.h  CRectangulo.cpp  CRectangulo.h  main.cpp
